// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Luna Moon Companion - Behavioral Driven Tests > Feature: Visual DOM Structure Snapshots > Scenario: Closed State Snapshot matches the exact design pattern 1`] = `
"

  <!-- The Draggable Moon -->
  <div class="moon-container" id="moon" data-tauri-drag-region="">
    <div class="moon-aura" aria-hidden="true"></div>
    <div class="moon-wrapper" id="moon-wrapper">
      <div class="moon-glow"></div>
      <div class="moon-sphere">
        <!-- Premium Crescent Moon SVG with a glowing lunar gradient and cute craters -->
        <svg class="moon-svg" viewBox="0 0 100 100">
          <defs>
            <linearGradient id="crescent-grad" x1="0%" y1="0%" x2="100%" y2="100%">
              <stop offset="0%" stop-color="#ffffff"></stop>
              <stop offset="35%" stop-color="#e2ecfd"></stop>
              <stop offset="70%" stop-color="#8ab4f8"></stop>
              <stop offset="100%" stop-color="#1b2a4a"></stop>
            </linearGradient>
            <filter id="glow-filter" x="-20%" y="-20%" width="140%" height="140%">
              <feGaussianBlur stdDeviation="3" result="blur"></feGaussianBlur>
              <feComposite in="SourceGraphic" in2="blur" operator="over"></feComposite>
            </filter>
          </defs>
          <!-- Crescent Path: perfectly smooth golden/blue crescent curve -->
          <path d="M 62 12 A 38 38 0 1 0 88 62 A 30 30 0 1 1 62 12 Z" fill="url(#crescent-grad)" filter="url(#glow-filter)"></path>
          <!-- Cute Craters inside the crescent body -->
          <circle cx="40" cy="42" r="4.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="34" cy="60" r="3.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="48" cy="28" r="3" fill="#05070f" opacity="0.35"></circle>
          <circle cx="28" cy="48" r="2.5" fill="#05070f" opacity="0.3"></circle>
        </svg>
      </div>
    </div>
  </div>

  <!-- Re-tether "string" (siblings of #moon, z-index > 100 to escape its drag
       region). Hidden until the connection drops; pull the bead to reconnect to
       the SAME thread. Physics ported verbatim from the approved demo. -->
  <svg class="moon-rope-layer" id="moon-rope-layer" aria-hidden="true">
    <defs>
      <linearGradient id="moonRopeGrad" x1="0" y1="0" x2="0" y2="1">
        <stop offset="0%" stop-color="rgba(226,236,253,.55)"></stop>
        <stop offset="100%" stop-color="rgba(138,180,248,.9)"></stop>
      </linearGradient>
    </defs>
    <!-- halo / core / shimmer share one Verlet \`d\` per frame (see the CSS notes) -->
    <path id="moon-rope-halo"></path>
    <path id="moon-rope"></path>
    <path id="moon-rope-shimmer" pathLength="1"></path>
  </svg>
  <div class="moon-bead" id="moon-bead" title="Pull to reconnect" aria-label="Reconnect to your thread">
    <svg viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 4v6h-6"></path><path d="M1 20v-6h6"></path><path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path></g></svg>
  </div>

  <!-- Settings: a standalone tabbed modal (body-level overlay). Moved OUT of
       #chat-panel so it floats on top independently of the chat, and so this
       fixed overlay is never hidden by the chat panel's opacity:0 collapsed
       state. ids (#settings-panel, #close-settings-btn) + every input id are
       preserved, so all existing handlers/DOM refs keep working. -->
  <div class="settings-panel" id="settings-panel">
    <div class="settings-card" role="dialog" aria-modal="true" aria-label="Settings">
      <div class="settings-card-header">
        <h3>Settings</h3>
        <button type="button" class="settings-x" id="settings-close-x" aria-label="Close settings">
          <svg viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="18" y1="6" x2="6" y2="18"></line>
            <line x1="6" y1="6" x2="18" y2="18"></line>
          </svg>
        </button>
      </div>
      <div class="settings-body">
      <div class="settings-tabs" role="tablist">
        <button type="button" class="settings-tab active" data-tab="general" role="tab" aria-selected="true">General</button>
        <button type="button" class="settings-tab" data-tab="connection" role="tab" aria-selected="false">Connection</button>
        <button type="button" class="settings-tab" data-tab="secrets" role="tab" aria-selected="false">Secrets</button>
        <button type="button" class="settings-tab" data-tab="updates" role="tab" aria-selected="false">Updates</button>
      </div>
      <div class="settings-content">
        <div class="settings-tabpanel active" data-tabpanel="general">
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Always on Top</span>
            <span class="setting-desc">Keep Luna floating above other windows</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="always-on-top-toggle" checked="">
            <span class="slider"></span>
          </label>
        </div>
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Close on Click Away</span>
            <span class="setting-desc">Collapse chat automatically when unfocused</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="close-on-blur-toggle">
            <span class="slider"></span>
          </label>
        </div>
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Global Shortcut</span>
            <span class="setting-desc">Press shortcut to toggle Luna window</span>
          </div>
          <div class="shortcut-recorder-group">
            <input type="text" class="shortcut-input" id="shortcut-input" readonly="" value="⌥Space">
            <button type="button" class="record-btn" id="record-shortcut-btn">Record</button>
          </div>
        </div>
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Start a fresh thread</span>
            <span class="setting-desc">Luna keeps one ongoing thread. This abandons the current conversation and begins a new one — your history stays on the server.</span>
          </div>
          <button type="button" class="record-btn" id="fresh-thread-btn">Start fresh</button>
        </div>
        </div>
        <div class="settings-tabpanel" data-tabpanel="connection">
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Channel</span>
            <span class="setting-desc">Switch this moon between the stable and dev servers</span>
            <span class="channel-error" id="channel-error" hidden=""></span>
          </div>
          <select id="channel-select" class="channel-select">
            <option value="stable">Stable</option>
            <option value="dev">Dev</option>
          </select>
        </div>
        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">WebSocket Server URL</span>
            <span class="setting-desc">Luna Central server WebSocket address (for the selected channel)</span>
          </div>
          <input type="text" id="ws-url-input" class="premium-text-input" placeholder="ws://127.0.0.1:4753/ui">
        </div>
        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">Auth Token</span>
            <span class="setting-desc">Optional authentication bearer token</span>
          </div>
          <input type="password" id="ws-token-input" class="premium-text-input" placeholder="Enter token (optional)...">
        </div>
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Setup wizard</span>
            <span class="setting-desc">Guided setup — install Luna on this Mac, on a server, or point at one already running</span>
          </div>
          <button type="button" class="record-btn" id="open-wizard-btn">Open</button>
        </div>
        </div>
        <div class="settings-tabpanel" data-tabpanel="secrets">
        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">1Password Service Account</span>
            <span class="setting-desc">Send an <code>ops_…</code> service-account token to the server securely. It is verified and stored on the server — never kept in chat history or on this device.</span>
          </div>
          <input type="text" id="op-label-input" class="premium-text-input" placeholder="Account label (e.g. primary)" autocomplete="off" spellcheck="false" style="margin-bottom: 8px;">
          <input type="password" id="op-token-input" class="premium-text-input" placeholder="ops_… service-account token" autocomplete="off" spellcheck="false">
          <div style="display: flex; align-items: center; gap: 10px; margin-top: 8px;">
            <button type="button" class="record-btn" id="save-op-token-btn">Save to server</button>
            <span class="setting-desc" id="op-token-status" style="font-size: 0.75rem;" hidden=""></span>
          </div>
          <span class="setting-desc" style="margin-top: 6px;">Saving verifies the token and briefly restarts the server.</span>
        </div>
        </div>
        <div class="settings-tabpanel" data-tabpanel="updates">
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">App Updates</span>
            <span class="setting-desc">Check GitHub for a newer Luna Moon build</span>
            <span class="update-status" id="update-status" hidden=""></span>
          </div>
          <button type="button" class="record-btn" id="check-update-btn">Check</button>
        </div>
        </div>
      </div>
      </div>
      <div class="settings-footer">
        <button class="save-settings-btn" id="close-settings-btn">Done</button>
      </div>
    </div>
  </div>

  <!-- ════════════════════════════════════════════════════════════════════
       Setup Wizard — multi-step first-run flow. Auto-opens when no
       connection has ever been configured (SetupWizard.maybeAutoOpen, gated
       on a real Tauri runtime so jsdom/frontend-dev never see it uninvited);
       re-runnable from Settings → Connection → Setup wizard. Three paths:
         · local   — install + start the Luna server on THIS Mac via
                     local_shell_exec (git clone → bun install → wake → pulse)
         · remote  — collect a host, hand back a tailored copy-paste install
                     command, then verify the resulting server
         · connect — point the moon at a Luna that is already running
       Every path funnels into the same connect step: a live hello-frame
       probe against the entered URL, then persist via save_connection. ═══ -->
  <div class="wizard-panel" id="setup-wizard" aria-hidden="true">
    <div class="wizard-card" role="dialog" aria-modal="true" aria-label="Luna setup">
      <div class="wizard-wash" aria-hidden="true">
        <span class="wash-blot wash-a"></span>
        <span class="wash-blot wash-b"></span>
        <span class="wash-blot wash-c"></span>
      </div>
      <button type="button" class="settings-x wizard-x" id="wizard-close-x" aria-label="Close setup">
        <svg viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
          <line x1="18" y1="6" x2="6" y2="18"></line>
          <line x1="6" y1="6" x2="18" y2="18"></line>
        </svg>
      </button>
      <div class="wizard-beads" id="wizard-beads" aria-hidden="true">
        <span class="wizard-bead" data-bead="0"></span>
        <span class="wizard-bead" data-bead="1"></span>
        <span class="wizard-bead" data-bead="2"></span>
        <span class="wizard-bead" data-bead="3"></span>
        <span class="wizard-bead" data-bead="4"></span>
      </div>
      <div class="wizard-body">

        <div class="wizard-step active" data-step="welcome">
          <div class="wizard-hero-blot" aria-hidden="true"></div>
          <h2>Welcome to Luna</h2>
          <p class="wizard-sub">Hi — I’m your moon. I just need to know where Luna, my other half, should live. Pick a spot on the next screen and I’ll take care of the rest.</p>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-skip">Skip for now</button>
            <button type="button" class="wizard-primary-btn" id="wizard-begin">Begin</button>
          </div>
        </div>

        <div class="wizard-step" data-step="path">
          <h2>Where should Luna live?</h2>
          <p class="wizard-sub">You can change your mind any time — this wizard lives in Settings.</p>
          <div class="wizard-paths">
            <button type="button" class="wizard-path-card" data-path="local">
              <span class="wizard-blot-icon" aria-hidden="true">
                <svg viewBox="0 0 24 24"><rect x="3" y="4.5" width="18" height="12" rx="1.8"></rect><line x1="8.5" y1="20" x2="15.5" y2="20"></line><line x1="12" y1="16.5" x2="12" y2="20"></line></svg>
              </span>
              <span class="wizard-path-title">This Mac</span>
              <span class="wizard-path-desc" id="wizard-path-local-desc">Everything stays private, right on this computer</span>
            </button>
            <button type="button" class="wizard-path-card" data-path="remote">
              <span class="wizard-blot-icon" aria-hidden="true">
                <svg viewBox="0 0 24 24"><rect x="3" y="3.5" width="18" height="7" rx="1.6"></rect><rect x="3" y="13.5" width="18" height="7" rx="1.6"></rect><circle cx="7" cy="7" r="0.6"></circle><circle cx="7" cy="17" r="0.6"></circle></svg>
              </span>
              <span class="wizard-path-title">My own server</span>
              <span class="wizard-path-desc">For a home server or Linux box you own</span>
            </button>
            <button type="button" class="wizard-path-card" data-path="connect">
              <span class="wizard-blot-icon" aria-hidden="true">
                <svg viewBox="0 0 24 24"><path d="M10 13a5 5 0 0 0 7.5.5l3-3a5 5 0 0 0-7-7l-1.7 1.7"></path><path d="M14 11a5 5 0 0 0-7.5-.5l-3 3a5 5 0 0 0 7 7l1.7-1.7"></path></svg>
              </span>
              <span class="wizard-path-title">Already running</span>
              <span class="wizard-path-desc">Just connect to a Luna that exists somewhere</span>
            </button>
          </div>
          <p class="wizard-sub wizard-detect-note" id="wizard-detect-note" hidden=""></p>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-path-back">Back</button>
          </div>
        </div>

        <div class="wizard-step" data-step="local">
          <h2 id="wizard-local-title">Set up Luna on this Mac</h2>
          <p class="wizard-sub" id="wizard-local-sub">I’ll download Luna, set her up, and wake her — all on this machine. Nothing leaves your Mac.</p>
          <details class="wizard-advanced">
            <summary>Advanced options</summary>
            <div class="wizard-field">
              <label for="wizard-local-dir">Install folder</label>
              <input type="text" id="wizard-local-dir" class="premium-text-input" value="~/luna" spellcheck="false" autocomplete="off">
              <span class="field-hint">Luna’s code lives here; her data and settings live in ~/.luna. The defaults are fine for almost everyone.</span>
            </div>
          </details>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-local-back">Back</button>
            <button type="button" class="wizard-ghost-btn" id="wizard-local-connect" hidden="">Just connect to it</button>
            <button type="button" class="wizard-primary-btn" id="wizard-local-start">Install &amp; start</button>
          </div>
        </div>

        <div class="wizard-step" data-step="progress">
          <h2 id="wizard-progress-title">Painting Luna onto this Mac…</h2>
          <p class="wizard-sub" id="wizard-progress-sub">This can take a few minutes the first time. Feel free to watch the beads.</p>
          <div class="wizard-tasks" id="wizard-progress-list"></div>
          <pre class="wizard-log" id="wizard-progress-log" hidden=""></pre>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-progress-back" hidden="">Back</button>
            <button type="button" class="wizard-primary-btn" id="wizard-progress-next" hidden="">Connect to it</button>
          </div>
        </div>

        <div class="wizard-step" data-step="remote">
          <h2>Install on your server</h2>
          <p class="wizard-sub">Tell me your server’s name and I’ll write the whole command for you. Paste it into the Terminal app, let it finish, then come back here.</p>
          <div class="wizard-field">
            <label for="wizard-remote-host">Your server</label>
            <input type="text" id="wizard-remote-host" class="premium-text-input" placeholder="like: me@my-server" spellcheck="false" autocomplete="off">
          </div>
          <div class="wizard-cmd-block">
            <button type="button" class="wizard-copy-btn" id="wizard-remote-copy">Copy</button>
            <pre id="wizard-remote-cmd"></pre>
          </div>
          <div class="wizard-field">
            <span class="field-hint">When it finishes, the last line it prints is your secret key — keep it handy, you’ll paste it on the next step. (For safety, Luna talks only over your private network, like Tailscale.)</span>
          </div>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-remote-back">Back</button>
            <button type="button" class="wizard-primary-btn" id="wizard-remote-continue">I ran it — continue</button>
          </div>
        </div>

        <div class="wizard-step" data-step="connect">
          <h2>Point your moon at Luna</h2>
          <p class="wizard-sub">Where does Luna live? I’ll listen for her hello before saving anything.</p>
          <div class="wizard-field">
            <label for="wizard-connect-url">Luna’s address</label>
            <input type="text" id="wizard-connect-url" class="premium-text-input" placeholder="ws://127.0.0.1:4753/ui" spellcheck="false" autocomplete="off">
          </div>
          <div class="wizard-field">
            <label for="wizard-connect-token">Secret key <span style="font-weight:400;color:#64748b;">(optional)</span></label>
            <input type="password" id="wizard-connect-token" class="premium-text-input" placeholder="Printed during install — leave empty if you don’t have one" autocomplete="off">
          </div>
          <div class="wizard-connect-status" id="wizard-connect-status"></div>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-connect-back">Back</button>
            <button type="button" class="wizard-ghost-btn" id="wizard-test-btn">Test connection</button>
            <button type="button" class="wizard-primary-btn" id="wizard-finish-btn">Save &amp; finish</button>
          </div>
        </div>

        <div class="wizard-step" data-step="done">
          <div class="wizard-hero-blot" aria-hidden="true"></div>
          <h2 id="wizard-done-title">Luna is tethered</h2>
          <p class="wizard-sub" id="wizard-done-summary">Your moon has a home.</p>
          <p class="wizard-sub" style="font-size: 0.74rem;">Your moon keeps itself up to date on its own — and any time Luna herself needs a refresh, just re-run this wizard from Settings and pick “This Mac” again.</p>
          <div class="wizard-actions">
            <button type="button" class="wizard-primary-btn" id="wizard-done-btn">Start chatting</button>
          </div>
        </div>

      </div>
    </div>
  </div>
  <!-- The Glassmorphic Chat Panel -->
  <div class="chat-panel" id="chat-panel">
    <!-- Chat Header supports dragging the native window too! -->
    <div class="chat-header" data-tauri-drag-region="">
      <div class="chat-title-group">
        <div class="chat-avatar"></div>
        <div class="chat-meta">
          <h2>Luna Companion</h2>
          <span id="connection-status" class="connecting">Connecting...</span>
          <!-- Active channel (stable / dev), additive. Kept as a <small>, NOT a
               <span>, so the \`.chat-meta span::before\` dot rule doesn't draw a
               status dot next to it. Hidden until a profile is resolved so older
               state degrades gracefully. -->
          <small id="active-profile" title="Active channel: stable">stable</small>
          <!-- Build identity from the server's hello frame (additive). Kept as a
               <small>, NOT a <span>, so the \`.chat-meta span::before\` dot rule
               doesn't draw a status dot next to it. Hidden until populated. -->
          <small id="build-sha" hidden=""></small>
        </div>
      </div>
      <div class="header-actions">
        <!-- Settings lives here in the header (it orbited the moon as a
             satellite for a while — that felt off, so it came home). Opens
             the tabbed settings modal (#settings-panel). -->
        <button class="close-btn" id="toggle-settings" aria-label="Settings" title="Settings">
          <svg viewBox="0 0 24 24" width="15" height="15" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
            <circle cx="12" cy="12" r="3"></circle>
            <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-4 0v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1 0-4h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
          </svg>
        </button>
        <button class="close-btn" id="close-chat" aria-label="Close Chat">
          <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="18" y1="6" x2="6" y2="18"></line>
            <line x1="6" y1="6" x2="18" y2="18"></line>
          </svg>
        </button>
      </div>
    </div>
    
    
    <div class="chat-messages" id="chat-messages">
      <div class="msg assistant">
        Hey there! I am your native macOS Luna companion. Drag me anywhere on your screens, or click me to toggle this chat widget!
      </div>
    </div>
    
    <!-- UserAsk / alignment-survey banner. Hidden by default; SurveyEngine
         populates and reveals it when a server \`survey-request\` frame
         arrives. Lives between chat-messages and the input form so it sits
         where the operator's eye naturally lands when answering. -->
    <div class="user-ask-panel" id="user-ask-panel" role="dialog" aria-labelledby="user-ask-title" hidden="">
      <div class="user-ask-header">
        <span class="user-ask-icon" aria-hidden="true">🌙</span>
        <h3 class="user-ask-title" id="user-ask-title">Luna is checking in</h3>
        <button type="button" class="user-ask-dismiss" id="user-ask-dismiss" aria-label="Dismiss check-in">×</button>
      </div>
      <div class="user-ask-body" id="user-ask-body"></div>
      <div class="user-ask-footer">
        <span class="user-ask-hint" id="user-ask-hint">Rate task quality to submit</span>
        <button type="button" class="user-ask-submit" id="user-ask-submit" disabled="">Submit</button>
      </div>
    </div>

    <!-- Secure secret-entry panel. Hidden by default; SecretPromptEngine
         populates and reveals it when the server pushes a \`secret-request\`
         frame. The agent (server) asks for a secret (API key, token, …); the
         user types it into the password field below and the value is sent back
         on a single \`secret-result\` frame and then immediately wiped from the
         input. SECURITY: the typed secret NEVER touches localStorage, a Tauri
         command, or the chat transcript — it lives only in the input until the
         OPEN-guarded send, after which the field is cleared one-shot. Mirrors
         the docked user-ask-panel so it lands where the operator's eye does. -->
    <div class="secret-prompt-panel" id="secret-prompt-panel" role="dialog" aria-labelledby="secret-prompt-title" hidden="">
      <div class="user-ask-header">
        <span class="user-ask-icon" aria-hidden="true">🔐</span>
        <h3 class="user-ask-title" id="secret-prompt-title">Luna needs a secret</h3>
        <button type="button" class="user-ask-dismiss" id="secret-prompt-cancel-x" aria-label="Cancel secret entry">×</button>
      </div>
      <div class="user-ask-body">
        <div class="secret-prompt-prompt" id="secret-prompt-prompt"></div>
        <div class="secret-prompt-consent" id="secret-prompt-consent"></div>
        <input type="password" id="secret-prompt-input" class="premium-text-input" placeholder="Enter the secret value…" autocomplete="off" spellcheck="false">
      </div>
      <div class="user-ask-footer">
        <span class="user-ask-hint secret-prompt-status" id="secret-prompt-status" hidden=""></span>
        <button type="button" class="user-ask-dismiss-btn" id="secret-prompt-cancel">Cancel</button>
        <button type="button" class="user-ask-submit" id="secret-prompt-submit">Submit</button>
      </div>
    </div>

    <form class="chat-input-area" id="chat-form">
      <div class="attach-error" id="attach-error" hidden=""></div>
      <div class="attachments-strip" id="attachments-strip" hidden=""></div>
      <!-- Machine-access popover, anchored to .chat-input-area (position:relative),
           opening upward above the composer row. -->
      <div class="scope-menu" id="scope-menu" role="menu" aria-hidden="true">
        <div class="scope-menu-hint">Let Luna read &amp; run anything on this Mac</div>
        <div class="scope-menu-item" id="scope-full-access" role="menuitemcheckbox" aria-checked="false" tabindex="0">
          <span>Full machine access</span>
          <span class="scope-menu-check" aria-hidden="true">✓</span>
        </div>
      </div>
      <div class="composer-row">
        <input type="file" id="file-input" multiple="" hidden="">
        <!-- Machine access (computer icon) — opens #scope-menu above. -->
        <button type="button" class="scope-btn" id="scope-btn" aria-label="Machine access" title="Let Luna access this machine">
          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
            <rect x="3" y="4.5" width="18" height="12" rx="1.8"></rect>
            <line x1="8.5" y1="20" x2="15.5" y2="20"></line>
            <line x1="12" y1="16.5" x2="12" y2="20"></line>
          </svg>
        </button>
        <button type="button" class="attach-btn" id="attach-btn" aria-label="Attach files" title="Attach files">
          <!-- paperclip -->
          <svg viewBox="0 0 24 24">
            <path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path>
          </svg>
        </button>
        <textarea class="chat-input" id="message-input" placeholder="Type a message..." rows="1" autocomplete="off"></textarea>
        <button type="submit" class="send-btn" aria-label="Send message">
          <svg viewBox="0 0 24 24">
            <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
          </svg>
        </button>
      </div>
    </form>
    <!-- Drag this corner to resize the whole panel. It triggers a native window resize
         (the window is frameless, so it has no OS resize edges of its own). -->
    <div class="resize-grip" id="resize-grip" title="Drag to resize" aria-hidden="true"></div>
  </div>

  <script>/* elided for snapshot */</script>
"
`;

exports[`Luna Moon Companion - Behavioral Driven Tests > Feature: Visual DOM Structure Snapshots > Scenario: Open State Snapshot matches the exact design pattern 1`] = `
"

  <!-- The Draggable Moon -->
  <div class="moon-container" id="moon" data-tauri-drag-region="">
    <div class="moon-aura" aria-hidden="true"></div>
    <div class="moon-wrapper" id="moon-wrapper" style="transform: none;">
      <div class="moon-glow"></div>
      <div class="moon-sphere">
        <!-- Premium Crescent Moon SVG with a glowing lunar gradient and cute craters -->
        <svg class="moon-svg" viewBox="0 0 100 100">
          <defs>
            <linearGradient id="crescent-grad" x1="0%" y1="0%" x2="100%" y2="100%">
              <stop offset="0%" stop-color="#ffffff"></stop>
              <stop offset="35%" stop-color="#e2ecfd"></stop>
              <stop offset="70%" stop-color="#8ab4f8"></stop>
              <stop offset="100%" stop-color="#1b2a4a"></stop>
            </linearGradient>
            <filter id="glow-filter" x="-20%" y="-20%" width="140%" height="140%">
              <feGaussianBlur stdDeviation="3" result="blur"></feGaussianBlur>
              <feComposite in="SourceGraphic" in2="blur" operator="over"></feComposite>
            </filter>
          </defs>
          <!-- Crescent Path: perfectly smooth golden/blue crescent curve -->
          <path d="M 62 12 A 38 38 0 1 0 88 62 A 30 30 0 1 1 62 12 Z" fill="url(#crescent-grad)" filter="url(#glow-filter)"></path>
          <!-- Cute Craters inside the crescent body -->
          <circle cx="40" cy="42" r="4.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="34" cy="60" r="3.5" fill="#05070f" opacity="0.35"></circle>
          <circle cx="48" cy="28" r="3" fill="#05070f" opacity="0.35"></circle>
          <circle cx="28" cy="48" r="2.5" fill="#05070f" opacity="0.3"></circle>
        </svg>
      </div>
    </div>
  </div>

  <!-- Re-tether "string" (siblings of #moon, z-index > 100 to escape its drag
       region). Hidden until the connection drops; pull the bead to reconnect to
       the SAME thread. Physics ported verbatim from the approved demo. -->
  <svg class="moon-rope-layer" id="moon-rope-layer" aria-hidden="true">
    <defs>
      <linearGradient id="moonRopeGrad" x1="0" y1="0" x2="0" y2="1">
        <stop offset="0%" stop-color="rgba(226,236,253,.55)"></stop>
        <stop offset="100%" stop-color="rgba(138,180,248,.9)"></stop>
      </linearGradient>
    </defs>
    <!-- halo / core / shimmer share one Verlet \`d\` per frame (see the CSS notes) -->
    <path id="moon-rope-halo"></path>
    <path id="moon-rope"></path>
    <path id="moon-rope-shimmer" pathLength="1"></path>
  </svg>
  <div class="moon-bead" id="moon-bead" title="Pull to reconnect" aria-label="Reconnect to your thread">
    <svg viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 4v6h-6"></path><path d="M1 20v-6h6"></path><path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path></g></svg>
  </div>

  <!-- Settings: a standalone tabbed modal (body-level overlay). Moved OUT of
       #chat-panel so it floats on top independently of the chat, and so this
       fixed overlay is never hidden by the chat panel's opacity:0 collapsed
       state. ids (#settings-panel, #close-settings-btn) + every input id are
       preserved, so all existing handlers/DOM refs keep working. -->
  <div class="settings-panel" id="settings-panel">
    <div class="settings-card" role="dialog" aria-modal="true" aria-label="Settings">
      <div class="settings-card-header">
        <h3>Settings</h3>
        <button type="button" class="settings-x" id="settings-close-x" aria-label="Close settings">
          <svg viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="18" y1="6" x2="6" y2="18"></line>
            <line x1="6" y1="6" x2="18" y2="18"></line>
          </svg>
        </button>
      </div>
      <div class="settings-body">
      <div class="settings-tabs" role="tablist">
        <button type="button" class="settings-tab active" data-tab="general" role="tab" aria-selected="true">General</button>
        <button type="button" class="settings-tab" data-tab="connection" role="tab" aria-selected="false">Connection</button>
        <button type="button" class="settings-tab" data-tab="secrets" role="tab" aria-selected="false">Secrets</button>
        <button type="button" class="settings-tab" data-tab="updates" role="tab" aria-selected="false">Updates</button>
      </div>
      <div class="settings-content">
        <div class="settings-tabpanel active" data-tabpanel="general">
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Always on Top</span>
            <span class="setting-desc">Keep Luna floating above other windows</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="always-on-top-toggle" checked="">
            <span class="slider"></span>
          </label>
        </div>
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Close on Click Away</span>
            <span class="setting-desc">Collapse chat automatically when unfocused</span>
          </div>
          <label class="switch">
            <input type="checkbox" id="close-on-blur-toggle">
            <span class="slider"></span>
          </label>
        </div>
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Global Shortcut</span>
            <span class="setting-desc">Press shortcut to toggle Luna window</span>
          </div>
          <div class="shortcut-recorder-group">
            <input type="text" class="shortcut-input" id="shortcut-input" readonly="" value="⌥Space">
            <button type="button" class="record-btn" id="record-shortcut-btn">Record</button>
          </div>
        </div>
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Start a fresh thread</span>
            <span class="setting-desc">Luna keeps one ongoing thread. This abandons the current conversation and begins a new one — your history stays on the server.</span>
          </div>
          <button type="button" class="record-btn" id="fresh-thread-btn">Start fresh</button>
        </div>
        </div>
        <div class="settings-tabpanel" data-tabpanel="connection">
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Channel</span>
            <span class="setting-desc">Switch this moon between the stable and dev servers</span>
            <span class="channel-error" id="channel-error" hidden=""></span>
          </div>
          <select id="channel-select" class="channel-select">
            <option value="stable">Stable</option>
            <option value="dev">Dev</option>
          </select>
        </div>
        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">WebSocket Server URL</span>
            <span class="setting-desc">Luna Central server WebSocket address (for the selected channel)</span>
          </div>
          <input type="text" id="ws-url-input" class="premium-text-input" placeholder="ws://127.0.0.1:4753/ui">
        </div>
        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">Auth Token</span>
            <span class="setting-desc">Optional authentication bearer token</span>
          </div>
          <input type="password" id="ws-token-input" class="premium-text-input" placeholder="Enter token (optional)...">
        </div>
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">Setup wizard</span>
            <span class="setting-desc">Guided setup — install Luna on this Mac, on a server, or point at one already running</span>
          </div>
          <button type="button" class="record-btn" id="open-wizard-btn">Open</button>
        </div>
        </div>
        <div class="settings-tabpanel" data-tabpanel="secrets">
        <div class="setting-item flex-column">
          <div class="setting-info" style="margin-bottom: 8px; width: 100%;">
            <span class="setting-label">1Password Service Account</span>
            <span class="setting-desc">Send an <code>ops_…</code> service-account token to the server securely. It is verified and stored on the server — never kept in chat history or on this device.</span>
          </div>
          <input type="text" id="op-label-input" class="premium-text-input" placeholder="Account label (e.g. primary)" autocomplete="off" spellcheck="false" style="margin-bottom: 8px;">
          <input type="password" id="op-token-input" class="premium-text-input" placeholder="ops_… service-account token" autocomplete="off" spellcheck="false">
          <div style="display: flex; align-items: center; gap: 10px; margin-top: 8px;">
            <button type="button" class="record-btn" id="save-op-token-btn">Save to server</button>
            <span class="setting-desc" id="op-token-status" style="font-size: 0.75rem;" hidden=""></span>
          </div>
          <span class="setting-desc" style="margin-top: 6px;">Saving verifies the token and briefly restarts the server.</span>
        </div>
        </div>
        <div class="settings-tabpanel" data-tabpanel="updates">
        <div class="setting-item">
          <div class="setting-info">
            <span class="setting-label">App Updates</span>
            <span class="setting-desc">Check GitHub for a newer Luna Moon build</span>
            <span class="update-status" id="update-status" hidden=""></span>
          </div>
          <button type="button" class="record-btn" id="check-update-btn">Check</button>
        </div>
        </div>
      </div>
      </div>
      <div class="settings-footer">
        <button class="save-settings-btn" id="close-settings-btn">Done</button>
      </div>
    </div>
  </div>

  <!-- ════════════════════════════════════════════════════════════════════
       Setup Wizard — multi-step first-run flow. Auto-opens when no
       connection has ever been configured (SetupWizard.maybeAutoOpen, gated
       on a real Tauri runtime so jsdom/frontend-dev never see it uninvited);
       re-runnable from Settings → Connection → Setup wizard. Three paths:
         · local   — install + start the Luna server on THIS Mac via
                     local_shell_exec (git clone → bun install → wake → pulse)
         · remote  — collect a host, hand back a tailored copy-paste install
                     command, then verify the resulting server
         · connect — point the moon at a Luna that is already running
       Every path funnels into the same connect step: a live hello-frame
       probe against the entered URL, then persist via save_connection. ═══ -->
  <div class="wizard-panel" id="setup-wizard" aria-hidden="true">
    <div class="wizard-card" role="dialog" aria-modal="true" aria-label="Luna setup">
      <div class="wizard-wash" aria-hidden="true">
        <span class="wash-blot wash-a"></span>
        <span class="wash-blot wash-b"></span>
        <span class="wash-blot wash-c"></span>
      </div>
      <button type="button" class="settings-x wizard-x" id="wizard-close-x" aria-label="Close setup">
        <svg viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
          <line x1="18" y1="6" x2="6" y2="18"></line>
          <line x1="6" y1="6" x2="18" y2="18"></line>
        </svg>
      </button>
      <div class="wizard-beads" id="wizard-beads" aria-hidden="true">
        <span class="wizard-bead" data-bead="0"></span>
        <span class="wizard-bead" data-bead="1"></span>
        <span class="wizard-bead" data-bead="2"></span>
        <span class="wizard-bead" data-bead="3"></span>
        <span class="wizard-bead" data-bead="4"></span>
      </div>
      <div class="wizard-body">

        <div class="wizard-step active" data-step="welcome">
          <div class="wizard-hero-blot" aria-hidden="true"></div>
          <h2>Welcome to Luna</h2>
          <p class="wizard-sub">Hi — I’m your moon. I just need to know where Luna, my other half, should live. Pick a spot on the next screen and I’ll take care of the rest.</p>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-skip">Skip for now</button>
            <button type="button" class="wizard-primary-btn" id="wizard-begin">Begin</button>
          </div>
        </div>

        <div class="wizard-step" data-step="path">
          <h2>Where should Luna live?</h2>
          <p class="wizard-sub">You can change your mind any time — this wizard lives in Settings.</p>
          <div class="wizard-paths">
            <button type="button" class="wizard-path-card" data-path="local">
              <span class="wizard-blot-icon" aria-hidden="true">
                <svg viewBox="0 0 24 24"><rect x="3" y="4.5" width="18" height="12" rx="1.8"></rect><line x1="8.5" y1="20" x2="15.5" y2="20"></line><line x1="12" y1="16.5" x2="12" y2="20"></line></svg>
              </span>
              <span class="wizard-path-title">This Mac</span>
              <span class="wizard-path-desc" id="wizard-path-local-desc">Everything stays private, right on this computer</span>
            </button>
            <button type="button" class="wizard-path-card" data-path="remote">
              <span class="wizard-blot-icon" aria-hidden="true">
                <svg viewBox="0 0 24 24"><rect x="3" y="3.5" width="18" height="7" rx="1.6"></rect><rect x="3" y="13.5" width="18" height="7" rx="1.6"></rect><circle cx="7" cy="7" r="0.6"></circle><circle cx="7" cy="17" r="0.6"></circle></svg>
              </span>
              <span class="wizard-path-title">My own server</span>
              <span class="wizard-path-desc">For a home server or Linux box you own</span>
            </button>
            <button type="button" class="wizard-path-card" data-path="connect">
              <span class="wizard-blot-icon" aria-hidden="true">
                <svg viewBox="0 0 24 24"><path d="M10 13a5 5 0 0 0 7.5.5l3-3a5 5 0 0 0-7-7l-1.7 1.7"></path><path d="M14 11a5 5 0 0 0-7.5-.5l-3 3a5 5 0 0 0 7 7l1.7-1.7"></path></svg>
              </span>
              <span class="wizard-path-title">Already running</span>
              <span class="wizard-path-desc">Just connect to a Luna that exists somewhere</span>
            </button>
          </div>
          <p class="wizard-sub wizard-detect-note" id="wizard-detect-note" hidden=""></p>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-path-back">Back</button>
          </div>
        </div>

        <div class="wizard-step" data-step="local">
          <h2 id="wizard-local-title">Set up Luna on this Mac</h2>
          <p class="wizard-sub" id="wizard-local-sub">I’ll download Luna, set her up, and wake her — all on this machine. Nothing leaves your Mac.</p>
          <details class="wizard-advanced">
            <summary>Advanced options</summary>
            <div class="wizard-field">
              <label for="wizard-local-dir">Install folder</label>
              <input type="text" id="wizard-local-dir" class="premium-text-input" value="~/luna" spellcheck="false" autocomplete="off">
              <span class="field-hint">Luna’s code lives here; her data and settings live in ~/.luna. The defaults are fine for almost everyone.</span>
            </div>
          </details>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-local-back">Back</button>
            <button type="button" class="wizard-ghost-btn" id="wizard-local-connect" hidden="">Just connect to it</button>
            <button type="button" class="wizard-primary-btn" id="wizard-local-start">Install &amp; start</button>
          </div>
        </div>

        <div class="wizard-step" data-step="progress">
          <h2 id="wizard-progress-title">Painting Luna onto this Mac…</h2>
          <p class="wizard-sub" id="wizard-progress-sub">This can take a few minutes the first time. Feel free to watch the beads.</p>
          <div class="wizard-tasks" id="wizard-progress-list"></div>
          <pre class="wizard-log" id="wizard-progress-log" hidden=""></pre>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-progress-back" hidden="">Back</button>
            <button type="button" class="wizard-primary-btn" id="wizard-progress-next" hidden="">Connect to it</button>
          </div>
        </div>

        <div class="wizard-step" data-step="remote">
          <h2>Install on your server</h2>
          <p class="wizard-sub">Tell me your server’s name and I’ll write the whole command for you. Paste it into the Terminal app, let it finish, then come back here.</p>
          <div class="wizard-field">
            <label for="wizard-remote-host">Your server</label>
            <input type="text" id="wizard-remote-host" class="premium-text-input" placeholder="like: me@my-server" spellcheck="false" autocomplete="off">
          </div>
          <div class="wizard-cmd-block">
            <button type="button" class="wizard-copy-btn" id="wizard-remote-copy">Copy</button>
            <pre id="wizard-remote-cmd"></pre>
          </div>
          <div class="wizard-field">
            <span class="field-hint">When it finishes, the last line it prints is your secret key — keep it handy, you’ll paste it on the next step. (For safety, Luna talks only over your private network, like Tailscale.)</span>
          </div>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-remote-back">Back</button>
            <button type="button" class="wizard-primary-btn" id="wizard-remote-continue">I ran it — continue</button>
          </div>
        </div>

        <div class="wizard-step" data-step="connect">
          <h2>Point your moon at Luna</h2>
          <p class="wizard-sub">Where does Luna live? I’ll listen for her hello before saving anything.</p>
          <div class="wizard-field">
            <label for="wizard-connect-url">Luna’s address</label>
            <input type="text" id="wizard-connect-url" class="premium-text-input" placeholder="ws://127.0.0.1:4753/ui" spellcheck="false" autocomplete="off">
          </div>
          <div class="wizard-field">
            <label for="wizard-connect-token">Secret key <span style="font-weight:400;color:#64748b;">(optional)</span></label>
            <input type="password" id="wizard-connect-token" class="premium-text-input" placeholder="Printed during install — leave empty if you don’t have one" autocomplete="off">
          </div>
          <div class="wizard-connect-status" id="wizard-connect-status"></div>
          <div class="wizard-actions">
            <button type="button" class="wizard-ghost-btn" id="wizard-connect-back">Back</button>
            <button type="button" class="wizard-ghost-btn" id="wizard-test-btn">Test connection</button>
            <button type="button" class="wizard-primary-btn" id="wizard-finish-btn">Save &amp; finish</button>
          </div>
        </div>

        <div class="wizard-step" data-step="done">
          <div class="wizard-hero-blot" aria-hidden="true"></div>
          <h2 id="wizard-done-title">Luna is tethered</h2>
          <p class="wizard-sub" id="wizard-done-summary">Your moon has a home.</p>
          <p class="wizard-sub" style="font-size: 0.74rem;">Your moon keeps itself up to date on its own — and any time Luna herself needs a refresh, just re-run this wizard from Settings and pick “This Mac” again.</p>
          <div class="wizard-actions">
            <button type="button" class="wizard-primary-btn" id="wizard-done-btn">Start chatting</button>
          </div>
        </div>

      </div>
    </div>
  </div>
  <!-- The Glassmorphic Chat Panel -->
  <div class="chat-panel active" id="chat-panel">
    <!-- Chat Header supports dragging the native window too! -->
    <div class="chat-header" data-tauri-drag-region="">
      <div class="chat-title-group">
        <div class="chat-avatar"></div>
        <div class="chat-meta">
          <h2>Luna Companion</h2>
          <span id="connection-status" class="connecting">Connecting...</span>
          <!-- Active channel (stable / dev), additive. Kept as a <small>, NOT a
               <span>, so the \`.chat-meta span::before\` dot rule doesn't draw a
               status dot next to it. Hidden until a profile is resolved so older
               state degrades gracefully. -->
          <small id="active-profile" title="Active channel: stable">stable</small>
          <!-- Build identity from the server's hello frame (additive). Kept as a
               <small>, NOT a <span>, so the \`.chat-meta span::before\` dot rule
               doesn't draw a status dot next to it. Hidden until populated. -->
          <small id="build-sha" hidden=""></small>
        </div>
      </div>
      <div class="header-actions">
        <!-- Settings lives here in the header (it orbited the moon as a
             satellite for a while — that felt off, so it came home). Opens
             the tabbed settings modal (#settings-panel). -->
        <button class="close-btn" id="toggle-settings" aria-label="Settings" title="Settings">
          <svg viewBox="0 0 24 24" width="15" height="15" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
            <circle cx="12" cy="12" r="3"></circle>
            <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-4 0v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1 0-4h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
          </svg>
        </button>
        <button class="close-btn" id="close-chat" aria-label="Close Chat">
          <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
            <line x1="18" y1="6" x2="6" y2="18"></line>
            <line x1="6" y1="6" x2="18" y2="18"></line>
          </svg>
        </button>
      </div>
    </div>
    
    
    <div class="chat-messages" id="chat-messages">
      <div class="msg assistant">
        Hey there! I am your native macOS Luna companion. Drag me anywhere on your screens, or click me to toggle this chat widget!
      </div>
    </div>
    
    <!-- UserAsk / alignment-survey banner. Hidden by default; SurveyEngine
         populates and reveals it when a server \`survey-request\` frame
         arrives. Lives between chat-messages and the input form so it sits
         where the operator's eye naturally lands when answering. -->
    <div class="user-ask-panel" id="user-ask-panel" role="dialog" aria-labelledby="user-ask-title" hidden="">
      <div class="user-ask-header">
        <span class="user-ask-icon" aria-hidden="true">🌙</span>
        <h3 class="user-ask-title" id="user-ask-title">Luna is checking in</h3>
        <button type="button" class="user-ask-dismiss" id="user-ask-dismiss" aria-label="Dismiss check-in">×</button>
      </div>
      <div class="user-ask-body" id="user-ask-body"></div>
      <div class="user-ask-footer">
        <span class="user-ask-hint" id="user-ask-hint">Rate task quality to submit</span>
        <button type="button" class="user-ask-submit" id="user-ask-submit" disabled="">Submit</button>
      </div>
    </div>

    <!-- Secure secret-entry panel. Hidden by default; SecretPromptEngine
         populates and reveals it when the server pushes a \`secret-request\`
         frame. The agent (server) asks for a secret (API key, token, …); the
         user types it into the password field below and the value is sent back
         on a single \`secret-result\` frame and then immediately wiped from the
         input. SECURITY: the typed secret NEVER touches localStorage, a Tauri
         command, or the chat transcript — it lives only in the input until the
         OPEN-guarded send, after which the field is cleared one-shot. Mirrors
         the docked user-ask-panel so it lands where the operator's eye does. -->
    <div class="secret-prompt-panel" id="secret-prompt-panel" role="dialog" aria-labelledby="secret-prompt-title" hidden="">
      <div class="user-ask-header">
        <span class="user-ask-icon" aria-hidden="true">🔐</span>
        <h3 class="user-ask-title" id="secret-prompt-title">Luna needs a secret</h3>
        <button type="button" class="user-ask-dismiss" id="secret-prompt-cancel-x" aria-label="Cancel secret entry">×</button>
      </div>
      <div class="user-ask-body">
        <div class="secret-prompt-prompt" id="secret-prompt-prompt"></div>
        <div class="secret-prompt-consent" id="secret-prompt-consent"></div>
        <input type="password" id="secret-prompt-input" class="premium-text-input" placeholder="Enter the secret value…" autocomplete="off" spellcheck="false">
      </div>
      <div class="user-ask-footer">
        <span class="user-ask-hint secret-prompt-status" id="secret-prompt-status" hidden=""></span>
        <button type="button" class="user-ask-dismiss-btn" id="secret-prompt-cancel">Cancel</button>
        <button type="button" class="user-ask-submit" id="secret-prompt-submit">Submit</button>
      </div>
    </div>

    <form class="chat-input-area" id="chat-form">
      <div class="attach-error" id="attach-error" hidden=""></div>
      <div class="attachments-strip" id="attachments-strip" hidden=""></div>
      <!-- Machine-access popover, anchored to .chat-input-area (position:relative),
           opening upward above the composer row. -->
      <div class="scope-menu" id="scope-menu" role="menu" aria-hidden="true">
        <div class="scope-menu-hint">Let Luna read &amp; run anything on this Mac</div>
        <div class="scope-menu-item" id="scope-full-access" role="menuitemcheckbox" aria-checked="false" tabindex="0">
          <span>Full machine access</span>
          <span class="scope-menu-check" aria-hidden="true">✓</span>
        </div>
      </div>
      <div class="composer-row">
        <input type="file" id="file-input" multiple="" hidden="">
        <!-- Machine access (computer icon) — opens #scope-menu above. -->
        <button type="button" class="scope-btn" id="scope-btn" aria-label="Machine access" title="Let Luna access this machine">
          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
            <rect x="3" y="4.5" width="18" height="12" rx="1.8"></rect>
            <line x1="8.5" y1="20" x2="15.5" y2="20"></line>
            <line x1="12" y1="16.5" x2="12" y2="20"></line>
          </svg>
        </button>
        <button type="button" class="attach-btn" id="attach-btn" aria-label="Attach files" title="Attach files">
          <!-- paperclip -->
          <svg viewBox="0 0 24 24">
            <path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path>
          </svg>
        </button>
        <textarea class="chat-input" id="message-input" placeholder="Type a message..." rows="1" autocomplete="off"></textarea>
        <button type="submit" class="send-btn" aria-label="Send message">
          <svg viewBox="0 0 24 24">
            <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path>
          </svg>
        </button>
      </div>
    </form>
    <!-- Drag this corner to resize the whole panel. It triggers a native window resize
         (the window is frameless, so it has no OS resize edges of its own). -->
    <div class="resize-grip" id="resize-grip" title="Drag to resize" aria-hidden="true"></div>
  </div>

  <script>/* elided for snapshot */</script>
"
`;
